--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn"onclick="generate()">Generate Password</button>
+          <button id="generate" class="btn"onclick="generatePassword()">Generate Password</button>
           
         </div>
       </div>
