--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <div class="card-body">
           <textarea
             readonly
-            id="password"
+            id="#password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
+          
         </div>
         <div class="card-footer">
           <button id="generate" class="btn"onclick="generatePassword()">Generate Password</button>
